--- a/ARM/ARM.csproj
+++ b/ARM/ARM.csproj
@@ -174,6 +174,8 @@
     <Compile Include="Classes\DataOperations.cs" />
     <Compile Include="Classes\FMOP.cs" />
     <Compile Include="Classes\Globals.cs" />
+    <Compile Include="Classes\LotePT.cs" />
+    <Compile Include="Classes\MateriaPrima.cs" />
     <Compile Include="Classes\OperationsARMS.cs" />
     <Compile Include="Classes\SecOps.cs" />
     <Compile Include="DUO\Modbus_Test.cs">
@@ -273,6 +275,23 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reports\dsIntakeView.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>dsIntakeView.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Reports\frmsearchOrder.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reports\frmsearchOrder.Designer.cs">
+      <DependentUpon>frmsearchOrder.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reports\IntakeBatchViewerFull.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reports\IntakeBatchViewerFull.Designer.cs">
+      <DependentUpon>IntakeBatchViewerFull.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reports\IntakeReport.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -371,6 +390,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Reports\frmsearchOrder.resx">
+      <DependentUpon>frmsearchOrder.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reports\IntakeBatchViewerFull.resx">
+      <DependentUpon>IntakeBatchViewerFull.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Reports\IntakeReport.resx">
       <DependentUpon>IntakeReport.cs</DependentUpon>
     </EmbeddedResource>
@@ -417,6 +442,17 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Reports\dsIntakeView.xsc">
+      <DependentUpon>dsIntakeView.xsd</DependentUpon>
+    </None>
+    <None Include="Reports\dsIntakeView.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>dsIntakeView.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Reports\dsIntakeView.xss">
+      <DependentUpon>dsIntakeView.xsd</DependentUpon>
+    </None>
     <None Include="Resources\Custom Form Designs\Hand_Feed.jpg" />
   </ItemGroup>
   <ItemGroup>
@@ -671,6 +707,7 @@
   <ItemGroup>
     <Content Include="Manufacturing_icon-hover.ico" />
     <Content Include="Manufacturing_icon-hover2.ico" />
+    <None Include="Resources\Excel-2-icon24px.png" />
     <None Include="Resources\PNG\Silos_x48.png" />
     <None Include="Resources\PNG\Silos_x32.png" />
     <None Include="Resources\PNG\Silos_x24.png" />
